--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,12 @@ body {
 h1 {
     color: white;
 }
+
+div {
+    background-color: dodgerblue;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 100px auto;
+
+}
