--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
+* {
+    text-align: center;
+    box-sizing: border-box;
+}
+
 body {
     background-color: black;
+
 }
 
 h1 {
@@ -12,5 +18,6 @@ div {
     height: 100px;
     border-radius: 50%;
     margin: 100px auto;
+
 
 }
