Create a third ball in html with a different class and change its color in css

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@ h1 {
     transition: 1s;
 
 }
-.ball2{
+
+.ball2 {
     background-color: lightseagreen;
+}
+
+.ball3 {
+    background-color: slateblue;
 }
